<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Personal Data Manager</string>
    <string name="lbl_enter_password">Enter your password</string>
    <string name="action_settings">Settings</string>
    <string name="action_lock">Lock</string>
    <string name="action_about">About</string>
    <string name="action_change_password">Change password</string>
    <string name="action_export_to_csv">Export to CSV</string>
    <string name="action_set_password">Set password</string>
    <string name="lbl_set_password">SET PASSWORD</string>
    <string name="action_edit">Edit</string>
    <string name="action_search">Search</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="lbl_enter_pwd">Enter your password</string>
    <string name="lbl_login">UNLOCK</string>
    <string name="show_pwd">Show Password</string>
    <string name="lbl_save">SAVE</string>
    <string name="lbl_update_button">UPDATE</string>
    <string name="lbl_viewList">View List </string>
    <string name="lbl_delete_item">Delete</string>
    <string name="title_cards">All Cards</string>
    <string name="no_tweet_found">No Tweet Found</string>
    <string name="hello_world">Hello world!</string>
    <string name="lbl_password">Enter new Password</string>
    <string name="lbl_current_password">Enter Current Password</string>
    <string name="lbl_confirm_password">Enter Confirm Password</string>
    <string name="lbl_category_icon_name">Icon</string>
    <string name="lbl_category_name">Category Name</string>
    <string name="lbl_category_field_heading">Field</string>
    <string name="lbl_category_delete_heading">Delete</string>
    <string name="lbl_item_password">Password</string>
    <string name="title_editor">Cards Entry</string>
    <string name="app_descrip">Save ur info</string>
    <string name="lbl_category_entries">Categories</string>
    <string name="lbl_categories">Config Categories </string>
    <string name="app_credits">Sudhakar B</string>
    <string name="title_activity_category_home">Category Home</string>
    <string name="title_activity_category_editor">Category Editor</string>
    <string name="title_activity_categories_list">Categories List</string>
    <string name="title_activity_display_categories_list">Categories List</string>
    <string name="lbl_item_name">Field</string>
    <string name="action_home">Home</string>
    <string name="title_activity_category_entry_view">CategoryEntryViewActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="dialog_delete_title">Delete Entry</string>
    <string name="dialog_delete_message">Are you sure you want to delete this?</string>
    <string name="delete">Delete</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_Category">DELETE CATEGORY</string>
    <string name="title_activity_test_search">TestSearchActivity</string>


</resources>