<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.blmsr.manager.CategoryHomeTabbedActivity">

    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search_white_24dp"
        android:showAsAction="always"
        android:title="@string/action_search" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_search" />

    <item
        android:id="@+id/action_lock"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_lock" />

    <item
        android:id="@+id/action_change_password"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_change_password" />

    <item
        android:id="@+id/action_export_csv"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_export_to_csv" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about" />
</menu>
