<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.blmsr.manager.CategoryEditorActivity">


    <!-- Edot, should appear as action button -->
    <item android:id="@+id/action_save"
        android:icon="@drawable/abc_btn_check_to_on_mtrl_015"
        android:title="@string/action_search"
        android:showAsAction="ifRoom"
        />

    <!-- Edot, should appear as action button -->
    <item android:id="@+id/action_delete"
        android:icon="@drawable/delete"
        android:title="@string/action_delete"
        android:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
</menu>
