<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.blmsr.manager.MainActivity"
    android:background="@color/blue"
    >

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:padding="10dp"
        android:text="@string/lbl_enter_password"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/pwd_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/fld_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_enter_pwd" 
         android:inputType="textPassword"
         android:textSize="13sp"
         android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <CheckBox
        android:id="@+id/cbShowPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/pwd_block"
        android:layout_below="@id/pwd_block"
        android:text="@string/show_pwd"

        />
    <Button
        android:id="@+id/btn_login"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cbShowPwd"
        android:text="@string/lbl_login" 
        android:layout_width="290dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:textSize="13sp"
        android:textStyle="bold"
        android:onClick="performLogin"
        />
</RelativeLayout>