<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.blmsr.manager.ChangePasswordActivity">

    <LinearLayout
        android:id="@+id/currentPasswordLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textSize="13sp">

        <EditText
            android:id="@+id/currentPasswordField"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/lbl_current_password"
            android:inputType="textPassword"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addCategiryNameItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentPasswordLayout"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/itemNameField"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/lbl_password"
            android:layout_marginLeft="30dp"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/addCategiryPasswordItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addCategiryNameItem"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/itemPasswordField"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/lbl_confirm_password"
            android:inputType="textPassword"
            android:layout_marginLeft="30dp"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/addCategiryPasswordItem"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:onClick="saveItem"
        android:text="@string/lbl_save"
        android:textSize="13sp"
        android:textStyle="bold" />
</RelativeLayout>