<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/wooden_background_1"
    tools:context="com.blmsr.manager.CategoryEditorActivity">

    <LinearLayout
        android:id="@+id/addCategiryNameItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/categoryNameTextView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_category_name"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/categoryIconName"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_category_icon_name"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addCategiryNameItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/categoryNameEditText"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_category_name"
            android:inputType="textAutoComplete" />

        <TextView
            android:id="@+id/categoryIconName1"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_category_icon_name"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/addCategiryFieldsHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/categoryFieldHeading"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_category_field_heading"
            android:inputType="textAutoComplete" />

        <TextView
            android:id="@+id/categoryIconHeading"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/lbl_category_delete_heading"
            android:textStyle="bold"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                </LinearLayout>

                <ImageButton
                    android:id="@+id/addField"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_below="@+id/addCategoryLayout"
                    android:src="@drawable/ic_input_add"
                    android:onClick="addField"
                    />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</LinearLayout>
